[gd_scene load_steps=5 format=3 uid="uid://mj4qdlfjjcmc"]

[ext_resource type="Script" uid="uid://b0aeiouuntoaj" path="res://characters/1_bodies/human_body.gd" id="1_s6gov"]

[sub_resource type="BoxShape3D" id="BoxShape3D_olcqk"]
size = Vector3(0.75, 0.75, 0.75)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1wngd"]
radius = 0.3
height = 1.5

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_fkdda"]
properties/0/path = NodePath("Skeleton3D/CoreBone:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Skeleton3D/CoreBone:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:head_type")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:hand_type")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:foot_type")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:skin_color")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:foot_color")
properties/6/spawn = true
properties/6/replication_mode = 2
properties/7/path = NodePath("Skeleton3D/CoreBone/HeadPivot:rotation")
properties/7/spawn = true
properties/7/replication_mode = 2
properties/8/path = NodePath(".:torso_type")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath(".:torso_top_color")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath(".:torso_bottom_color")
properties/10/spawn = true
properties/10/replication_mode = 1

[node name="HumanBody" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5416, 0)
script = ExtResource("1_s6gov")

[node name="Skeleton3D" type="Skeleton3D" parent="."]
bones/0/name = "Bone"
bones/0/parent = -1
bones/0/rest = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, -1.13591, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, -1.13591, 0)
bones/0/rotation = Quaternion(0, 0.707107, 0, 0.707107)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "Bone.001"
bones/1/parent = 0
bones/1/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1114, 0)
bones/1/enabled = true
bones/1/position = Vector3(0, 1.1114, 0)
bones/1/rotation = Quaternion(0, 0, 0, 1)
bones/1/scale = Vector3(1, 1, 1)

[node name="CoreBone" type="PhysicalBone3D" parent="Skeleton3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.536666, 0)
collision_layer = 4
collision_mask = 4
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.599244, 0)
body_offset = Transform3D(0, 0, -1, 0, 1, 0, 1, 0, 0, 0, 0.599244, 0)
bone_name = "Bone"

[node name="HeadCollision" type="CollisionShape3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, -0.102216)
shape = SubResource("BoxShape3D_olcqk")

[node name="BodyCollision" type="CollisionShape3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1, 0, 0, 0, 0.997237, 0.0742825, 0, -0.0742825, 0.997237, 0, -1.25, 0)
shape = SubResource("CapsuleShape3D_1wngd")

[node name="HeadPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.521684, 0.0129146)

[node name="HeadMeshPivot" type="Node3D" parent="Skeleton3D/CoreBone/HeadPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.321635, 0)

[node name="HairMeshPivot" type="Node3D" parent="Skeleton3D/CoreBone/HeadPivot"]

[node name="CameraPivot" type="Node3D" parent="Skeleton3D/CoreBone/HeadPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.307247, -0.416756)

[node name="TorsoPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.89963, 0)

[node name="LeftHandPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(-4.37114e-08, 8.74228e-08, -1, 0, -1, -8.74228e-08, -1, -3.82137e-15, 4.37114e-08, -0.4, -1.25, 0)

[node name="RightHandPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(4.37114e-08, 0, 1, 0, -1, 0, -1, 0, 4.37114e-08, 0.4, -1.25, 0)

[node name="LeftFootPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, -2, 0)

[node name="RightFootPivot" type="Node3D" parent="Skeleton3D/CoreBone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -2, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_fkdda")

[node name="BodyUpdateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="BodyUpdateTimer" to="." method="_on_body_update_timer_timeout"]
